--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,6 +1,6 @@
 body {
-    color: #E5E5E5;
-    background-color: blue;
+    color: #14213D;
+    background-color: #E5E5E5;
     font-family: "Outfit";
     margin: 0 auto;
 }
@@ -21,11 +21,15 @@ a {
 a:hover {
     background-color: #484E69;
 }
+
 /* End of Link/Nav related styling */
 
+/* Table page related styling */
 table {
     margin-top: 20px;
     font-family: "Outfit";
+    margin: auto;
+    margin-top: 30px;
 }
 
 table,
@@ -44,6 +48,8 @@ table#complex tr:nth-child(even) {
     color: #fff;
 }
 
+/* End of table page related styling */
+
 /* Footer related styling */
 footer {
     margin-top: 40px;
@@ -59,6 +65,7 @@ footer>a {
 footer>a:hover {
     background-color: inherit;
 }
+
 /* End of footer realted styling */
 
 .center-aligned {
@@ -68,8 +75,9 @@ footer>a:hover {
 .links1 {
     padding-top: 10px;
     background-color: #14213D;
+    color: #E5E5E5;
     padding: 30px;
-    margin-bottom: 50px; 
+    margin-bottom: 50px;
 }
 
 
@@ -89,6 +97,7 @@ nav {
     text-align: center;
 }
 
+/* Home page related styling */
 .goob1 {
     display: flex;
     flex-direction: row;
@@ -96,34 +105,42 @@ nav {
 }
 
 .goob2 {
-    background-color: #484E69;
+    background-color: #14213D;
+    color: #E5E5E5;
     margin: 10px;
     width: 500px;
     height: 200px;
     border-radius: 12px;
     transition: 0.3s;
-    filter: blur(4px);
 }
 
 .goob2:hover {
     transform: translate(0, -10px);
-    filter: blur(0);
 }
 
+/* End of home page related styling */
+
+/* First scripts page related styling */
 .fs {
     text-align: center;
-    background-color: #484E69;
+    background-color: #14213D;
+    color: #E5E5E5;
     padding: 5px;
     margin: 10px;
     border-radius: 12px;
 }
+
 .fs2 {
     text-align: center;
 }
 
+/* End of first scripts page related styling */
+
+/* Polygon page related styling */
 .polygon {
     text-align: center;
-    background-color: #484E69;
+    background-color: #14213D;
+    color: #E5E5E5;
     padding: 30px;
     margin: 100px;
     border-radius: 12px;
@@ -131,6 +148,9 @@ nav {
     margin-bottom: auto;
 }
 
+/* End of polygon page related styling */
+
+/* Calculator realted styling */
 .calculator {
     text-align: center;
 }
@@ -138,7 +158,7 @@ nav {
 .container {
     max-width: 400px;
     margin: 10vh auto 0 auto;
-    box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
+    box-shadow: 0px 0px 43px 17px #14213D;
 }
 
 #display {
@@ -151,29 +171,64 @@ nav {
 
 .buttons {
     display: grid;
-    border-bottom: 1px solid #999;
-    border-left: 1px solid #999;
+    border-bottom: 1px solid #000000;
+    border-left: 1px solid #000000;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.buttons > div {
-    border-top: 1px solid #999;
-    border-right: 1px solid #999;
+.buttons>div {
+    border-top: 1px solid #000000;
+    border-right: 1px solid #000000;
 }
 
 .button {
-    border: 0.5px solid #999;
+    border: 0.5px solid #000000;
     line-height: 100px;
     text-align: center;
     font-size: 25px;
     cursor: pointer;
 }
+
 #equal {
-    background-color: #5555ff;
+    background-color: #FCA311;
     color: white;
 }
 
 .button:hover {
-    background-color: #323330;
+    background-color: #14213D;
     color: white;
 }
+
+/* End of Calculator realted styling */
+
+/* Arrays related styling */
+.arrays {
+    text-align: center;
+    background-color: #14213D;
+    color: #E5E5E5;
+    padding: 30px;
+    margin: 100px;
+    border-radius: 12px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+/* End of Arrays related styling */
+
+/* Slideshow related styling */
+.picture img {
+    left: 0;
+    right: 0;
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.slideshow {
+    margin: 0px auto;
+    text-align: center;
+    display: block;
+}
+
+/* End of Slideshow related styling */
